#25 updated settings and dependencies, relocated database